Fix layout issues
- move "main section" and tablet styles from homepage to main styles
- hide horizontal overflow on mobile for homepage animation

--- a/assets/css/layout-home.css
+++ b/assets/css/layout-home.css
@@ -5,39 +5,44 @@ main {
     grid-auto-rows: min-content;
     gap: 1.5rem;
     grid-template-areas: "wel wel wel evt"
-                         "mfg mfg mfg mfg";
+        "mfg mfg mfg mfg";
 }
-main section {
-    padding: 1rem;
-}
+
 #welcome {
     grid-area: wel;
     /* grid-column: 1 / span 5; */
 }
+
 #welcome h3 {
     color: #777;
 }
+
 #upcoming-events {
     grid-area: evt;
     border-left: 2px solid var(--italy-red, black);
     padding-left: 1rem;
     height: fit-content;
 }
+
 #upcoming-events ul {
     list-style: none;
     padding: unset;
 }
+
 #upcoming-events ul li h5 {
     font-size: 1rem;
 }
+
 #upcoming-events ul li section {
     padding: unset;
     font-size: 0.875rem;
 }
+
 #upcoming-events div {
     position: relative;
     animation: events-slide-in 1s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
+
 #manufacturers {
     grid-area: mfg;
     display: flex;
@@ -45,31 +50,44 @@ main section {
     gap: var(--body-spacing);
     margin: var(--body-spacing) 0;
 }
+
 #manufacturers span {
     display: inline-block;
     flex: 1 0 25%;
     align-self: center;
     text-align: center;
 }
+
 #manufacturers img {
     width: 200px;
 }
 
 @keyframes events-slide-in {
-    0% {left: 200%; opacity: 0;}
-    100% {left: 0; opacity: 1;}
+    0% {
+        left: 200%;
+        opacity: 0;
+    }
+
+    100% {
+        left: 0;
+        opacity: 1;
+    }
 }
 
 /* ------ Tablet ------ */
 @media only screen and (max-width: 800px) {
-    body { font-size: 14px; }
-    header { margin-bottom: 1rem; }
-    main { grid-template-areas: "wel wel evt" "mfg mfg mfg"; }
-    main h1, main h2, main h3, main h4 { margin-top: 0.5rem; }
-    main section { padding-top: 0; }
+    main {
+        grid-template-areas: "wel wel evt" "mfg mfg mfg";
+    }
 }
 
 /* ------ Mobile ------ */
 @media only screen and (max-width: 600px) {
-    main { grid-template-areas: "wel" "evt" "mfg"; }
+    main {
+        grid-template-areas: "wel" "evt" "mfg";
+    }
+    html,body {
+		overflow-x: hidden;
+        max-width: 100%;
+	}
 }
